# OatppServer

./: .gitignore  CMakeLists.txt  README.md  builddeps.py  main.cc
.github/workflows/: build.yml  cmake.yml
libs/: oatpp-websocket.cmake  oatpp.cmake
libs/asio/: CMakeLists.txt
libs/kcp/: CMakeLists.txt
libs/lua/: CMakeLists.txt
libs/oatpp/: CMakeLists.txt
libs/oatpp-websocket/: CMakeLists.txt
libs/websocketpp/: CMakeLists.txt
src/: app.cc  app.h  app.hpp  main.cc
src/handler/: CMakeLists.txt  hello_handler.cc  hello_handler.h
src/log/: CMakeLists.txt  log_file_manager.cc  log_file_manager.h  log_manager.cc  log_manager.h  logging.cc  logging.h
src/platform/: CMakeLists.txt  platform.cc  platform.h
src/socket/: CMakeLists.txt  socket_controller.cc  socket_controller.h  udp_socket.cc  udp_socket.h  web_socket.cc  web_socket.h
src/util/: CMakeLists.txt  threadsafe_queue.hpp  util.cc  util.h
